test/testdata/invalid/utd_timeout_zero.cue
package config

import "github.com/grantcarthew/start/test/testdata/schemas"

// Invalid: timeout must be >= 1
tasks: "bad": schemas.#Task & {
	command: "echo test"
	prompt:  "Test"
	timeout: 0
}
